Primer commit desde VS code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicando con Git</title>
+    <title>Practicando con Git desde VS code</title>
 </head>
 <body>
     <h1>Git desde Cero</h1>
@@ -11,5 +11,10 @@
     <section>
         <p>Estoy en la rama test</p>
     </section>
+    <div>
+        <p>
+            Practicando desde VS code
+        </p>
+    </div>
 </body>
 </html>
